fixing flex wrap for mobile

--- a/style.css
+++ b/style.css
@@ -3,10 +3,20 @@
   --dark-green: rgb(0, 128, 0);
 }
 
+a {
+  text-decoration: none;
+  color: var(--dark-green);
+}
+a:hover {
+  color: var(--light-green);
+}
+
 .container {
   display: flex;
   justify-content: space-around;
   padding: 10px;
+  width: fit-content;
+  flex-wrap: wrap;
 }
 .container-items {
   display: flex;
@@ -18,18 +28,19 @@
   display: flex;
   flex-direction: column;
   padding: 10px;
-  gap: 10px;
 }
 .buttons {
   display: flex;
   flex-direction: row;
-  padding: 10px;
+  padding-top: 10px;
+  padding-bottom: 30px;
   gap: 10px;
 }
 .bingo-board {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 10px;
+  justify-content: center;
   }
 .bingo-cell {
   width: 140px; /* Adjust width as needed */
@@ -41,7 +52,6 @@
   align-items: center; /* Center content vertically */
   justify-content: center; /* Center content horizontally */
   border: 1px solid #000; /* Optional: adds a border */
-  margin: 2px; /* Optional: adds space between cells */
   text-align: center; /* Center text */
   margin: 2px;
   padding: 5px;
